// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pack-unpack test should convert a message resource file to translations 1`] = `
Array [
  Object {
    "condition": 0,
    "index": 0,
    "noun": 1,
    "refCond": 186,
    "refNoun": 20,
    "refVerb": 0,
    "sequence": 1,
    "talker": 99,
    "text": "The back door. ",
    "verb": 1,
  },
  Object {
    "condition": 0,
    "index": 1,
    "noun": 2,
    "refCond": 166,
    "refNoun": 166,
    "refVerb": 166,
    "sequence": 1,
    "talker": 99,
    "text": "They remind you of a bunch of Knochelkopfs. ",
    "verb": 1,
  },
  Object {
    "condition": 0,
    "index": 2,
    "noun": 4,
    "refCond": 166,
    "refNoun": 166,
    "refVerb": 166,
    "sequence": 1,
    "talker": 99,
    "text": "There is a chandelier with a rope attached. ",
    "verb": 1,
  },
  Object {
    "condition": 0,
    "index": 3,
    "noun": 5,
    "refCond": 0,
    "refNoun": 119,
    "refVerb": 0,
    "sequence": 1,
    "talker": 99,
    "text": "The door is already blocked. ",
    "verb": 4,
  },
  Object {
    "condition": 0,
    "index": 4,
    "noun": 6,
    "refCond": 119,
    "refNoun": 0,
    "refVerb": 244,
    "sequence": 1,
    "talker": 99,
    "text": "No time for that again (although it WAS fun).  Just get the heck outta here. ",
    "verb": 4,
  },
  Object {
    "condition": 1,
    "index": 5,
    "noun": 6,
    "refCond": 166,
    "refNoun": 166,
    "refVerb": 166,
    "sequence": 1,
    "talker": 99,
    "text": "The chandelier is out of your reach.",
    "verb": 4,
  },
  Object {
    "condition": 0,
    "index": 6,
    "noun": 6,
    "refCond": 0,
    "refNoun": 0,
    "refVerb": 0,
    "sequence": 1,
    "talker": 99,
    "text": "Chandelier, used to hold up the rope. ",
    "verb": 1,
  },
  Object {
    "condition": 0,
    "index": 7,
    "noun": 7,
    "refCond": 0,
    "refNoun": 0,
    "refVerb": 0,
    "sequence": 1,
    "talker": 99,
    "text": "He's been drinking Troll's sweat all night.  ",
    "verb": 1,
  },
  Object {
    "condition": 0,
    "index": 8,
    "noun": 8,
    "refCond": 166,
    "refNoun": 166,
    "refVerb": 166,
    "sequence": 1,
    "talker": 99,
    "text": "The front door is already barred.  ",
    "verb": 4,
  },
  Object {
    "condition": 0,
    "index": 9,
    "noun": 9,
    "refCond": 84,
    "refNoun": 65,
    "refVerb": 83,
    "sequence": 1,
    "talker": 99,
    "text": "The floor is strewn with flotsam and jetsam. ",
    "verb": 1,
  },
  Object {
    "condition": 2,
    "index": 10,
    "noun": 10,
    "refCond": 0,
    "refNoun": 0,
    "refVerb": 2,
    "sequence": 1,
    "talker": 99,
    "text": "You close and bar the door. ",
    "verb": 0,
  },
  Object {
    "condition": 3,
    "index": 11,
    "noun": 10,
    "refCond": 166,
    "refNoun": 119,
    "refVerb": 166,
    "sequence": 1,
    "talker": 99,
    "text": "\\"Oh, a wise guy, eh?\\" ",
    "verb": 0,
  },
  Object {
    "condition": 4,
    "index": 12,
    "noun": 10,
    "refCond": 167,
    "refNoun": 166,
    "refVerb": 53,
    "sequence": 1,
    "talker": 99,
    "text": "There's no need to knock this guy out; the Troll's Sweat he's been drinking has already done the job for you. ",
    "verb": 0,
  },
  Object {
    "condition": 5,
    "index": 13,
    "noun": 10,
    "refCond": 0,
    "refNoun": 194,
    "refVerb": 119,
    "sequence": 1,
    "talker": 99,
    "text": "You move the chair in front of the door. ",
    "verb": 0,
  },
  Object {
    "condition": 0,
    "index": 14,
    "noun": 10,
    "refCond": 119,
    "refNoun": 166,
    "refVerb": 194,
    "sequence": 1,
    "talker": 99,
    "text": "Wooden tables, benches, and chairs fill the space of this brigand meeting area.  A chandelier lights the room and  an unlit candelabra stands in the corner.  A rope hangs from the chandelier. ",
    "verb": 1,
  },
  Object {
    "condition": 0,
    "index": 15,
    "noun": 10,
    "refCond": 166,
    "refNoun": 166,
    "refVerb": 166,
    "sequence": 1,
    "talker": 99,
    "text": "None of the doors are locked.",
    "verb": 51,
  },
  Object {
    "condition": 0,
    "index": 16,
    "noun": 11,
    "refCond": 0,
    "refNoun": 0,
    "refVerb": 0,
    "sequence": 1,
    "talker": 99,
    "text": "Leave the rope alone for now.  It's serving a very important function by holding up the chandelier.",
    "verb": 4,
  },
  Object {
    "condition": 0,
    "index": 17,
    "noun": 11,
    "refCond": 119,
    "refNoun": 119,
    "refVerb": 149,
    "sequence": 1,
    "talker": 99,
    "text": "The rope holds up the chandelier.  It's used to lower the chandelier so that it can be lit. ",
    "verb": 1,
  },
  Object {
    "condition": 0,
    "index": 18,
    "noun": 12,
    "refCond": 166,
    "refNoun": 166,
    "refVerb": 166,
    "sequence": 1,
    "talker": 99,
    "text": "Most of the tables are grimy with dried beer and such.  The head table, though, is clean. ",
    "verb": 1,
  },
  Object {
    "condition": 0,
    "index": 19,
    "noun": 3,
    "refCond": 0,
    "refNoun": 0,
    "refVerb": 0,
    "sequence": 1,
    "talker": 99,
    "text": "You begin toppling the candelabra.  ",
    "verb": 4,
  },
  Object {
    "condition": 1,
    "index": 20,
    "noun": 3,
    "refCond": 166,
    "refNoun": 0,
    "refVerb": 166,
    "sequence": 1,
    "talker": 99,
    "text": "The candelabra has already fallen.  ",
    "verb": 4,
  },
  Object {
    "condition": 0,
    "index": 21,
    "noun": 3,
    "refCond": 166,
    "refNoun": 166,
    "refVerb": 166,
    "sequence": 1,
    "talker": 99,
    "text": "Sturdy-looking device for holding candles. ",
    "verb": 1,
  },
]
`;

exports[`pack-unpack test should unpack a message resource file 1`] = `
Object {
  "data": Object {
    "entries": Array [
      Object {
        "condition": 0,
        "noun": 1,
        "offset": 228,
        "refCond": 186,
        "refNoun": 20,
        "refSeq": 0,
        "refVerb": 0,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
      Object {
        "condition": 0,
        "noun": 2,
        "offset": 244,
        "refCond": 166,
        "refNoun": 166,
        "refSeq": 0,
        "refVerb": 166,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
      Object {
        "condition": 0,
        "noun": 4,
        "offset": 289,
        "refCond": 166,
        "refNoun": 166,
        "refSeq": 0,
        "refVerb": 166,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
      Object {
        "condition": 0,
        "noun": 5,
        "offset": 334,
        "refCond": 0,
        "refNoun": 119,
        "refSeq": 0,
        "refVerb": 0,
        "sequence": 1,
        "talker": 99,
        "verb": 4,
      },
      Object {
        "condition": 0,
        "noun": 6,
        "offset": 364,
        "refCond": 119,
        "refNoun": 0,
        "refSeq": 0,
        "refVerb": 244,
        "sequence": 1,
        "talker": 99,
        "verb": 4,
      },
      Object {
        "condition": 1,
        "noun": 6,
        "offset": 442,
        "refCond": 166,
        "refNoun": 166,
        "refSeq": 0,
        "refVerb": 166,
        "sequence": 1,
        "talker": 99,
        "verb": 4,
      },
      Object {
        "condition": 0,
        "noun": 6,
        "offset": 479,
        "refCond": 0,
        "refNoun": 0,
        "refSeq": 0,
        "refVerb": 0,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
      Object {
        "condition": 0,
        "noun": 7,
        "offset": 518,
        "refCond": 0,
        "refNoun": 0,
        "refSeq": 0,
        "refVerb": 0,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
      Object {
        "condition": 0,
        "noun": 8,
        "offset": 564,
        "refCond": 166,
        "refNoun": 166,
        "refSeq": 0,
        "refVerb": 166,
        "sequence": 1,
        "talker": 99,
        "verb": 4,
      },
      Object {
        "condition": 0,
        "noun": 9,
        "offset": 600,
        "refCond": 84,
        "refNoun": 65,
        "refSeq": 0,
        "refVerb": 83,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
      Object {
        "condition": 2,
        "noun": 10,
        "offset": 646,
        "refCond": 0,
        "refNoun": 0,
        "refSeq": 0,
        "refVerb": 2,
        "sequence": 1,
        "talker": 99,
        "verb": 0,
      },
      Object {
        "condition": 3,
        "noun": 10,
        "offset": 675,
        "refCond": 166,
        "refNoun": 119,
        "refSeq": 0,
        "refVerb": 166,
        "sequence": 1,
        "talker": 99,
        "verb": 0,
      },
      Object {
        "condition": 4,
        "noun": 10,
        "offset": 698,
        "refCond": 167,
        "refNoun": 166,
        "refSeq": 0,
        "refVerb": 53,
        "sequence": 1,
        "talker": 99,
        "verb": 0,
      },
      Object {
        "condition": 5,
        "noun": 10,
        "offset": 809,
        "refCond": 0,
        "refNoun": 194,
        "refSeq": 0,
        "refVerb": 119,
        "sequence": 1,
        "talker": 99,
        "verb": 0,
      },
      Object {
        "condition": 0,
        "noun": 10,
        "offset": 851,
        "refCond": 119,
        "refNoun": 166,
        "refSeq": 0,
        "refVerb": 194,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
      Object {
        "condition": 0,
        "noun": 10,
        "offset": 1044,
        "refCond": 166,
        "refNoun": 166,
        "refSeq": 0,
        "refVerb": 166,
        "sequence": 1,
        "talker": 99,
        "verb": 51,
      },
      Object {
        "condition": 0,
        "noun": 11,
        "offset": 1074,
        "refCond": 0,
        "refNoun": 0,
        "refSeq": 0,
        "refVerb": 0,
        "sequence": 1,
        "talker": 99,
        "verb": 4,
      },
      Object {
        "condition": 0,
        "noun": 11,
        "offset": 1174,
        "refCond": 119,
        "refNoun": 119,
        "refSeq": 0,
        "refVerb": 149,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
      Object {
        "condition": 0,
        "noun": 12,
        "offset": 1267,
        "refCond": 166,
        "refNoun": 166,
        "refSeq": 0,
        "refVerb": 166,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
      Object {
        "condition": 0,
        "noun": 3,
        "offset": 1358,
        "refCond": 0,
        "refNoun": 0,
        "refSeq": 0,
        "refVerb": 0,
        "sequence": 1,
        "talker": 99,
        "verb": 4,
      },
      Object {
        "condition": 1,
        "noun": 3,
        "offset": 1395,
        "refCond": 166,
        "refNoun": 0,
        "refSeq": 0,
        "refVerb": 166,
        "sequence": 1,
        "talker": 99,
        "verb": 4,
      },
      Object {
        "condition": 0,
        "noun": 3,
        "offset": 1432,
        "refCond": 166,
        "refNoun": 166,
        "refSeq": 0,
        "refVerb": 166,
        "sequence": 1,
        "talker": 99,
        "verb": 1,
      },
    ],
    "lastMsgNum": 1470,
    "length": 0,
    "nEntries": 22,
    "version": 218890383,
  },
  "strings": Array [
    "The back door. ",
    "They remind you of a bunch of Knochelkopfs. ",
    "There is a chandelier with a rope attached. ",
    "The door is already blocked. ",
    "No time for that again (although it WAS fun).  Just get the heck outta here. ",
    "The chandelier is out of your reach.",
    "Chandelier, used to hold up the rope. ",
    "He's been drinking Troll's sweat all night.  ",
    "The front door is already barred.  ",
    "The floor is strewn with flotsam and jetsam. ",
    "You close and bar the door. ",
    "\\"Oh, a wise guy, eh?\\" ",
    "There's no need to knock this guy out; the Troll's Sweat he's been drinking has already done the job for you. ",
    "You move the chair in front of the door. ",
    "Wooden tables, benches, and chairs fill the space of this brigand meeting area.  A chandelier lights the room and  an unlit candelabra stands in the corner.  A rope hangs from the chandelier. ",
    "None of the doors are locked.",
    "Leave the rope alone for now.  It's serving a very important function by holding up the chandelier.",
    "The rope holds up the chandelier.  It's used to lower the chandelier so that it can be lit. ",
    "Most of the tables are grimy with dried beer and such.  The head table, though, is clean. ",
    "You begin toppling the candelabra.  ",
    "The candelabra has already fallen.  ",
    "Sturdy-looking device for holding candles. ",
  ],
}
`;
